--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.primary-btn {
+  @apply flex items-center justify-between w-full px-4 py-2 text-sm font-medium leading-5 
+    text-white transition-colors duration-150 bg-teal-700 border border-transparent rounded-lg active:bg-teal-700 
+    hover:bg-teal-700 focus:outline-none focus:ring-2 focus:ring-teal-600;
 }
