--- a/app/globals.css
+++ b/app/globals.css
@@ -15,7 +15,12 @@
   focus:bg-white focus:ring-teal-300 focus:outline-none focus:ring-2;
 }
 
-.primary-checkbox {
+.primary-checkbox, .primary-radio {
   @apply accent-teal-500 focus:ring-teal-400 focus:outline-none focus:ring-2 
   text-slate-900 text-sm font-semibold dark:text-slate-200;
+}
+
+.table-head {
+  @apply text-xs font-semibold tracking-wide text-left text-white uppercase border-b
+ dark:border-gray-700 bg-gray-500 dark:text-gray-400 dark:bg-zinc-700
 }
