--- a/app/globals.css
+++ b/app/globals.css
@@ -8,19 +8,66 @@
     hover:bg-teal-700 focus:outline-none focus:ring-2 focus:ring-teal-600;
 }
 
-.primary-input, .primary-select {
+.primary-input,
+.primary-select {
   @apply w-full pl-8 pr-2 py-3 text-sm text-gray-700 placeholder-gray-600 
   bg-gray-100 border-0 rounded-md dark:placeholder-gray-500 dark:focus:ring-gray-200
   dark:focus:placeholder-gray-600 dark:bg-gray-700 dark:text-gray-200 focus:placeholder-gray-500 
   focus:bg-white focus:ring-teal-300 focus:outline-none focus:ring-2;
 }
 
-.primary-checkbox, .primary-radio {
+.primary-checkbox,
+.primary-radio {
   @apply accent-teal-500 focus:ring-teal-400 focus:outline-none focus:ring-2 
   text-slate-900 text-sm font-semibold dark:text-slate-200;
 }
 
 .table-head {
   @apply text-xs font-semibold tracking-wide text-left text-white uppercase border-b
- dark:border-gray-700 bg-gray-500 dark:text-gray-400 dark:bg-zinc-700
+ dark:border-gray-700 bg-gray-500 dark:text-gray-400 dark:bg-zinc-700;
+}
+
+::-webkit-scrollbar-thumb {
+  @apply bg-transparent;
+}
+
+::-webkit-scrollbar-track {
+  @apply bg-transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  @apply bg-teal-500;
+}
+
+.scroller::-webkit-scrollbar-thumb {
+  @apply bg-transparent;
+}
+.scroller::-webkit-scrollbar-track {
+  @apply bg-transparent;
+}
+
+.scroller:hover::-webkit-scrollbar-thumb {
+  @apply bg-gray-500 dark:bg-zinc-700;
+}
+.scroller:hover::-webkit-scrollbar-track {
+  @apply bg-gray-300;
+}
+
+.scrollbar-gutter-stable {
+  scrollbar-gutter: stable;
+}
+
+.scroller::-webkit-scrollbar {
+  max-width: 0.5rem;
+  max-height: 0.5rem;
+}
+
+
+::-webkit-scrollbar {
+  max-width: 1rem;
+  max-height: 1rem;
+}
+
+.scroller:hover {
+  --fix: ; /* This custom property invalidates styles on hover, thereby enforcing a style recomputation. This is needed to work around a bug in Safari. */
 }
